2006-08-22  Andre Klapper  <a9016009@gmx.de>

	* e-shell-window-commands.c: Update some credits for
	the previous development series.

2006-08-22  Hiroyuki Ikezoe  <poincare@ikezoe.net>

	** Fixes bug #346317
	* e-user-creatable-items-handler.c: (set_combo_button_style): Truncate
	spaces from the label of new mail button.

2006-08-21  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #346797 Patch by Matthew Barnes

	* e-shell-window-commands.c: (command_submit_bug): Fix to use new bug
	buddy.

2006-08-17  Kjartan Maraas  <kmaraas@gnome.org>

	* e-user-creatable-items-handler.c: (new_button_change),
	(setup_toolbar_button): Plug some leaks.

2006-08-02  Andre Klapper  <a9016009@gmx.de>

	* main.c: update last stable version number from 2.6.2 to 2.6.3

2006-07-27  Bastien Nocera  <hadess@hadess.net>

	* e-shell-nm-glib.c: (e_shell_glib_network_monitor),
	(e_shell_nm_glib_initialise), (e_shell_nm_glib_dispose):
	* e-shell-nm.c: (e_shell_dbus_dispose):
	* e-shell-window.c: (impl_dispose): Fix warnings at build-time, and
	clean up the connections to the D-Bus on exit (Closes: #332387)

2006-07-13  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #345331
	
	* e-user-creatable-items-handler.c: (set_combo_button_style): Default
	to both style.

2006-07-12  Hiroyuki Ikezoe  <poincare@ikezoe.net>

	** Fixes bug #347182
	* e-user-creatable-items-handlers.c:
	(set_combo_button_style): New function.
	(new_button_change): Call set_combo_button_style.
	(setup_toolbar_button): Call set_combo_button_style.

2006-07-07  Li Yuan  <li.yuan@sun.com>

	* e-shell-window.c: (setup_widgets):
	Fix for #346613.
	Fix the problem pointed out by Johnny <jjohnny@novell.com>.
	When maximize Evolution, close and start Evolution sometimes,
	the sidebar grows towards right. Set the view_notebook can be expanded
	when the paned widget is resized.

2006-07-05  Li Yuan  <li.yuan@sun.com>

	* e-shell-window.c: (setup_widgets):
	Fix for #346613.